<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@drawable/card"
    android:layout_height="wrap_content">

    <ImageView
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:id="@+id/logo_img"
        android:src="@drawable/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/appname"
        android:layout_gravity="center_horizontal"
        android:text="@string/app_name"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        android:textSize="15sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/version"
        android:layout_gravity="center_horizontal"
        android:text="@string/version"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        android:textSize="15sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/developer"
        android:layout_gravity="center_horizontal"
        android:text="@string/dev"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        android:textSize="15sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/refrence"
        android:layout_gravity="center_horizontal"
        android:text="@string/reference"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        android:textSize="15sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:id="@+id/rate"
        android:text="Rate This App"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/rate_button"
        android:layout_marginBottom="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>