<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:id="@+id/main_id"
    tools:context=".Activity.ScientistDetailsActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
        
        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="@color/colorPrimary"
            app:expandedTitleMarginStart="20dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_margin="20dp"
                android:id="@+id/relative"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_gravity="center_vertical"
                android:id="@+id/scientist_img"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_margin="15dp"
                android:src="@mipmap/ic_launcher"/>

                <LinearLayout
                    android:layout_marginTop="40dp"
                    android:layout_marginLeft="20dp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <TextView
                    android:textColor="@color/colorWhite"
                    android:text="@string/scientist_na"
                    android:textStyle="bold"
                    android:textSize="15sp"
                    android:id="@+id/scientist_na"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                    <TextView
                        android:textColor="@color/colorWhite"
                        android:layout_marginTop="5dp"
                        android:text="@string/scientist_birth"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:id="@+id/scientist_birth"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:textColor="@color/colorWhite"
                        android:layout_marginTop="5dp"
                        android:text="@string/scientist_death"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:id="@+id/scientist_death"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:textColor="@color/colorWhite"
                        android:layout_marginTop="5dp"
                        android:text="@string/scientist_country"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:id="@+id/scientist_country"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>
            </LinearLayout>

            <androidx.appcompat.widget.Toolbar
                app:titleTextColor="@color/colorWhite"
                app:theme="@style/ToolbarTheme"
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                android:elevation="7dp"/>

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/scientist_field"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/scientist_field"
                        android:textSize="15sp"
                        android:textStyle="normal" />

                    <TextView
                        android:textColor="@color/colorWhite"
                        android:id="@+id/scientist_field_name"
                        android:layout_width="120dp"
                        android:layout_height="30dp"
                        android:background="@drawable/field_background"
                        android:padding="5dp"
                        android:text="@string/scientist_field_name"
                        android:textAlignment="center" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/scientist_awards"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/scientist_awards"
                        android:textSize="15sp"
                        android:textStyle="normal" />

                    <TextView
                        android:textColor="@color/colorWhite"
                        android:id="@+id/scientist_awards_name"
                        android:layout_width="120dp"
                        android:layout_height="30dp"
                        android:background="@drawable/field_background"
                        android:padding="5dp"
                        android:text="@string/scientist_awards_name"
                        android:textAlignment="center" />

                </LinearLayout>

            </LinearLayout>


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="5dp">

                <TextView
                    android:textSize="15dp"
                    android:id="@+id/scientist_details"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/scientist_details"
                    android:textAppearance="@style/TextAppearance.AppCompat"
                    android:layout_margin="5dp"
                    android:padding="10dp"/>

            </androidx.cardview.widget.CardView>

            <com.google.android.gms.ads.AdView
                xmlns:ads="http://schemas.android.com/apk/res-auto"
                android:id="@+id/madView"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                ads:adSize="BANNER"
                ads:adUnitId="ca-app-pub-8400259296647183/9180337949">
            </com.google.android.gms.ads.AdView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="5dp">

                <TextView
                    android:textSize="15dp"
                    android:id="@+id/scientist_works"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/scientist_works"
                    android:textAppearance="@style/TextAppearance.AppCompat"
                    android:layout_margin="5dp"
                    android:padding="10dp" />

            </androidx.cardview.widget.CardView>



            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="20dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="5dp">

                <TextView
                    android:textSize="15dp"
                    android:id="@+id/scientist_books"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/scientist_books"
                    android:textAppearance="@style/TextAppearance.AppCompat"
                    android:layout_margin="5dp"
                    android:padding="10dp"/>

            </androidx.cardview.widget.CardView>

            <com.google.android.gms.ads.AdView
                xmlns:ads="http://schemas.android.com/apk/res-auto"
                android:id="@+id/ladView"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                ads:adSize="BANNER"
                ads:adUnitId="ca-app-pub-8400259296647183/9180337949">
            </com.google.android.gms.ads.AdView>
        </LinearLayout>


    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>