<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        app:cardElevation="8dp"
        app:cardCornerRadius="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <ImageView
                android:id="@+id/j_img"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:scaleType="centerCrop"
                android:src="@drawable/news" />

            <TextView
                android:layout_margin="5dp"
                android:textStyle="bold"
                android:maxLines="2"
                android:text="@string/j_title"
                android:layout_marginTop="5dp"
                android:id="@+id/j_headline"
                android:layout_below="@+id/j_img"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_margin="2dp"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:maxLines="3"
                android:text="@string/j_detail"
                android:id="@+id/j_detail"
                android:layout_below="@+id/j_headline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:padding="2dp"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textAlignment="center"
                android:text="@string/j_date"
                android:textColor="@color/colorWhite"
                android:background="@drawable/field_background"
                android:layout_alignParentEnd="true"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:layout_alignBottom="@id/j_img"
                android:id="@+id/j_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>